updated the template for lessons

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" media="print" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap-xxs.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
     {% for stylesheet in page.stylesheets %}
