added octicons and fixed css on print

--- a/_includes/panel_0_prepare.html
+++ b/_includes/panel_0_prepare.html
@@ -5,6 +5,7 @@
         <div class="row-fluid">
           <span class="span6">Подготовка</span>
           <span class="span6 pull-right">
+            {% octicon clock %}
             {% if include.time %}
               {{ include.time }}
             {% else %}
