added a cloci icon

--- a/_includes/panel_1_engage.html
+++ b/_includes/panel_1_engage.html
@@ -5,6 +5,7 @@
         <div class="row-fluid">
           <span class="span6">Въвличане</span>
           <span class="span6 pull-right">
+            <i class="glyphicon glyphicon-time"></i>
             {% if include.time %}
               {{ include.time }}
             {% else %}
