--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap-xxs.css">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
     {% for stylesheet in page.stylesheets %}
       <link rel="stylesheet" href="{{ site.baseurl }}/{{ stylesheet }}">
