--- a/_includes/panel_0_prepare.html
+++ b/_includes/panel_0_prepare.html
@@ -2,17 +2,7 @@
   <div class="col-xxs-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <div class="row-fluid">
-          <span class="span6">Подготовка</span>
-          <span class="span6 pull-right">
-            {% octicon clock %}
-            {% if include.time %}
-              {{ include.time }}
-            {% else %}
-              5
-            {% endif %}
-          </span>
-        </div>
+        <div class="row-fluid">Подготовка</div>
       </div>
       <div class="panel-body">
         {% for activity in include.content %}
