--- a/_includes/panel_base.html
+++ b/_includes/panel_base.html
@@ -1,8 +1,12 @@
 <div class="panel panel-info">
-  <div class="panel-heading">Въпроси</div>
+  <div class="panel-heading">
+    <span class="glyphicon glyphicon-question-sign"></span>
+    Въпроси
+  </div>
   <div class="panel-body">
     <div class="row">
-      <div class="col-md-3 col-sm-6 col-xxs-12">
+      <div class="col-md-4 col-sm-6 col-xxs-12">
+        <span class="glyphicon glyphicon-film"></span>
         Как изглеждат учениците на края на часа?
         <ul>
           {% for base in include.base.look %}
@@ -11,16 +15,8 @@
         </ul>
       </div>
 
-      <div class="col-md-3 col-sm-6 col-xxs-12">
-        Какво знаят и могат?
-        <ul>
-          {% for base in include.base.can %}
-            <li>{{ base }}</li>
-          {% endfor %}
-        </ul>
-      </div>
-
-      <div class="col-md-3 col-sm-6 col-xxs-12">
+      <div class="col-md-4 col-sm-6 col-xxs-12">
+        <span class="glyphicon glyphicon-road"></span>
         Какво трябва да преживеят, за да успеят да постигнат целите на урока?
         <ul>
           {% for base in include.base.experience %}
@@ -29,7 +25,8 @@
         </ul>
       </div>
 
-      <div class="col-md-3 col-sm-6 col-xxs-12">
+      <div class="col-md-4 col-sm-6 col-xxs-12">
+        <span class="glyphicon glyphicon-check"></span>
         Какво ще проследявам през часа? Как и в кои моменти?
         <ul>
           {% for base in include.base.verify %}
