added new fonts and renamed lesson 6 to lesson 8

--- a/_includes/panel_1_engage.html
+++ b/_includes/panel_1_engage.html
@@ -15,7 +15,7 @@
       <span class="span6">Въвличане</span>
       <span class="span6 pull-right">
         <span class="glyphicon glyphicon-time"></span>
-          {{ time }}
+          {{ time }} минути
       </span>
     </div>
   </div>
