--- a/_includes/panel_5_evaluate.html
+++ b/_includes/panel_5_evaluate.html
@@ -13,7 +13,7 @@
       <span class="span6">Обобщаване</span>
       <span class="span6 pull-right">
         <i class="glyphicon glyphicon-time"></i>
-        {{ time }}
+        {{ time }} минути
       </span>
     </div>
   </div>
