--- a/_includes/panel_aims.html
+++ b/_includes/panel_aims.html
@@ -19,7 +19,7 @@
           {% endfor %}
         </ul>
       </div>
-      <div class="col-md-3 col-sm-6 col-xxs-12">
+      <div class="col-sm-6 col-xxs-12">
         <span class="glyphicon glyphicon-tint"></span>
         Урочна цел
         <ul>
@@ -28,7 +28,7 @@
           {% endfor %}
         </ul>
       </div>
-      <div class="col-md-6 col-xxs-12">
+      <div class="col-md-3 col-xxs-12">
         <span class="glyphicon glyphicon-map-marker"></span>
         Къде сме?
         <div class="progress">
