--- a/_includes/panel_0_prepare.html
+++ b/_includes/panel_0_prepare.html
@@ -6,6 +6,35 @@
     </div>
   </div>
   <div class="panel-body">
+    <div class="row">
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-refresh"></span>
+        Предния ден
+        <ul>
+        {% for activity in phase.previous_day %}
+          <li>{{ activity }}</li>
+        {% endfor %}
+        </ul>
+      </div>
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-cog"></span>
+        Сутринта
+        <ul>
+        {% for activity in phase.in_the_morning %}
+          <li>{{ activity }}</li>
+        {% endfor %}
+        </ul>
+      </div>
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-cog"></span>
+        Преди урока
+        <ul>
+        {% for activity in phase.before_the_lesson %}
+          <li>{{ activity }}</li>
+        {% endfor %}
+        </ul>
+      </div>
+    </div>
     <ul>
     {% for activity in include.phase.content %}
       <li>{{ activity }}</li>
