--- a/_includes/panel_4_elaborate.html
+++ b/_includes/panel_4_elaborate.html
@@ -56,7 +56,8 @@
     </div>
   </div>
   <div class="panel-footer">
-    <span class="glyphicon glyphicon-unchecked"></span>
-    {{ verify }}
+    {% for check in verify %}
+      <input type="checkbox">{{ check }}<br>
+    {% endfor %}
   </div>
 </div>
