--- a/_includes/panel_3_explain.html
+++ b/_includes/panel_3_explain.html
@@ -25,6 +25,7 @@
     </ul>
   </div>
   <div class="panel-footer">
+    Проверка:<br>
     {% for check in verify %}
       <input type="checkbox">{{ check }}<br>
     {% endfor %}
