--- a/_includes/panel_1_engage.html
+++ b/_includes/panel_1_engage.html
@@ -52,6 +52,7 @@
     </div>
   </div>
   <div class="panel-footer">
+    Проверка:<br>
     {% for check in verify %}
       <input type="checkbox">{{ check }}<br>
     {% endfor %}
