--- a/_includes/panel_4_elaborate.html
+++ b/_includes/panel_4_elaborate.html
@@ -56,6 +56,7 @@
     </div>
   </div>
   <div class="panel-footer">
+    Проверка:<br>
     {% for check in verify %}
       <input type="checkbox">{{ check }}<br>
     {% endfor %}
