--- a/_includes/panel_3_explain.html
+++ b/_includes/panel_3_explain.html
@@ -25,7 +25,7 @@
     </ul>
   </div>
   <div class="panel-footer">
-    Проверка:<br>
+    Постигнахме ли целта?<br>
     {% for check in verify %}
       <input type="checkbox">{{ check }}<br>
     {% endfor %}
