added versioning, moved css to assets folder

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap-xxs.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap-xxs.css">
 
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
     {% for stylesheet in page.stylesheets %}
