--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,7 +16,13 @@
   <body>
     <div class="container">
       <div class="page-header">
-        <h1>{{ page.title }}</h1>
+        <h1>
+          {% if layout.title %}
+            {{ layout.title }}
+          {% else %}
+            {{ page.title}}
+          {% endif %}
+        </h1>
       </div>
       <div class="row">
         <div class="col-xxs-12">
