show the baseurl variable

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,7 @@
 layout: base
 title: Уроците на г-н "Х"
 ---
+{{ site.baseurl }}
 {% for lesson in site.lessons %}
   {% capture url %}{{ site.baseurl }}{{ lesson.url }}{% endcapture %}
   <a href="{{ url }}">{{ lesson.title }}</a><br>
