--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap-xxs.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap-xxs.css">
     {% for stylesheet in page.stylesheets %}
-      <link rel="stylesheet" href="{{ site.baseurl }}/{{ stylesheet }}">
+      <link rel="stylesheet" href="{{ site.url }}/{{ stylesheet }}">
     {% endfor %}
   </head>
   <body>
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js">
     </script>
     {% for script in page.scripts %}
-      <script type="text/javascript" src="{{ site.baseurl }}/{{ script }}">
+      <script type="text/javascript" src="{{ site.url }}/{{ script }}">
       </script>
     {% endfor %}
   </body>
