--- a/_includes/panel_1_engage.html
+++ b/_includes/panel_1_engage.html
@@ -1,5 +1,5 @@
 {% assign aims = include.page.aims %}
-{% assign phase = include.page.phases[1] %}
+{% assign phase = include.page.engage %}
 {% assign content = phase.content %}
 {% assign time = 5 %}
 {% if phase.time %}
@@ -51,10 +51,12 @@
       </div>
     </div>
   </div>
-  <div class="panel-footer">
-    Постигнахме ли целта?<br>
-    {% for check in verify %}
-      <input type="checkbox">{{ check }}<br>
-    {% endfor %}
-  </div>
+  {% if verify %}
+    <div class="panel-footer">
+      Постигнахме ли целта?<br>
+      {% for check in verify %}
+        <input type="checkbox">{{ check }}<br>
+      {% endfor %}
+    </div>
+  {% endif %}
 </div>
