added numbers to the lesson panels

--- a/_includes/panel_1_engage.html
+++ b/_includes/panel_1_engage.html
@@ -11,7 +11,7 @@
   <div class="panel-heading">
     <div class="row-fluid">
       <span class="glyphicon glyphicon-cog"></span>
-      <span class="span6">Въвличане</span>
+      <span class="span6">1. Въвличане</span>
       <span class="span6 pull-right">
         <span class="glyphicon glyphicon-time"></span>
           {{ time }} минути
