--- a/_includes/panel_2_explore.html
+++ b/_includes/panel_2_explore.html
@@ -10,7 +10,7 @@
   <div class="panel-heading">
     <div class="row-fluid">
       <span class="glyphicon glyphicon-search"></span>
-      <span class="span6">Изследване</span>
+      <span class="span6">2. Изследване</span>
       <span class="span6 pull-right">
         <i class="glyphicon glyphicon-time"></i>
         {{ time }} минути
