--- a/_includes/panel_3_explain.html
+++ b/_includes/panel_3_explain.html
@@ -10,7 +10,7 @@
   <div class="panel-heading">
     <div class="row-fluid">
       <span class="glyphicon glyphicon-pencil"></span>
-      <span class="span6">Разясняване</span>
+      <span class="span6">3. Разясняване</span>
       <span class="span6 pull-right">
         <i class="glyphicon glyphicon-time"></i>
         {{ time }} минути
