--- a/_includes/panel_5_evaluate.html
+++ b/_includes/panel_5_evaluate.html
@@ -10,7 +10,7 @@
   <div class="panel-heading">
     <div class="row-fluid">
       <span class="glyphicon glyphicon-send"></span>
-      <span class="span6">Обобщаване</span>
+      <span class="span6">5. Обобщаване</span>
       <span class="span6 pull-right">
         <i class="glyphicon glyphicon-time"></i>
         {{ time }} минути
